added code that serialized user data and hashed it so client apps can check hash to see if it needs to update user info, added more user management features

--- a/app/views/admin/apps/index.html.haml
+++ b/app/views/admin/apps/index.html.haml
@@ -8,8 +8,8 @@
     %td Application Name
     %td ID (app_id)
     %td Secret (app_secret)
-  - if @apps  
-    - @apps.each do |app|
+  - if @apps
+    - @apps.sort_by(&:name).each do |app|
       %tr
         %td= link_to "#{app.name}", edit_admin_app_path(:id => app.id)
         %td= "#{app.app_id}"
