--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -15,3 +15,16 @@
         = link_to user.email, edit_admin_user_path(:id => user.id)
       %td= user.roles
       %td= user.status
+    %tr
+      %td{:colspan => 7}
+        %div.list_apps_main
+          %table
+            %tr
+              %td= "Application"
+              %td= "Roles"
+            - user.clients.sort_by(&:name).each do |client|
+              %tr
+                %td
+                  = client.name.to_s
+                %td
+                  = client.access_rights.find_by_user_id(user.id).roles.to_s
