added role syncing feature, auth can sync to clients for client roles

--- a/app/views/admin/apps/edit.html.haml
+++ b/app/views/admin/apps/edit.html.haml
@@ -1,3 +1,9 @@
 - title "Edit Application"
 
 = render "form"
+
+%h2== Roles
+
+= form_for :client, :url => admin_apps_sync_roles_path do |f|
+  = f.hidden_field :id, :value => @app.id
+  = f.submit "Sync Roles", :confirm => 'This feature will update Roles only on the Application, User Roles will need to be updated manually.'
