--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -20,7 +20,7 @@
         %div.list_apps_main
           %table
             %tr
-              %td= "Application"
+              %td= "Applications"
               %td= "Roles"
             - user.clients.sort_by(&:name).each do |client|
               %tr
