--- a/app/views/admin/users/_applications.html.haml
+++ b/app/views/admin/users/_applications.html.haml
@@ -3,17 +3,23 @@
   %div.list_active
     %h2= "Active"
     = form_for :clients, :url => admin_users_remove_apps_path, :method => :post do |f|
+      = hidden_field_tag :user_id, @user.id
       %table{:style => 'width:50%'}
         %tr
           %td= "Application"
           %td= "Roles"
           %td= "Delete"
+          %td== &nbsp;
         - @user.clients.sort_by(&:name).each do |client|
           %tr
             %td= "#{client.name}"
             %td= "#{client.access_rights.find_by_user_id(@user.id).roles}"
             %td= link_to 'Delete', admin_users_remove_app_path(:id => client.id, :user_id => @user.id), :confirm => "Are you sure?"
-          
+            %td= check_box_tag('client_ids[]', client.id, false, {:id => "client_"})
+        %tr
+          %td{:colspan => 2}
+          %td{:colspan => 2, :style => 'text-align:right'} 
+            = f.submit 'Delete All', :confirm => "Are you sure?"
   %div.list_all
     %h2= "All"
     = form_for :clients, :url => admin_users_add_apps_path, :method => :post do |f|
