--- a/app/views/admin/apps/edit.html.haml
+++ b/app/views/admin/apps/edit.html.haml
@@ -3,7 +3,11 @@
 = render "form"
 
 %h2== Roles
-
+%ul
+  - if @app.roles
+    - @app.roles.split(',').each do |role|
+      %li== #{role}
+    
 = form_for :client, :url => admin_apps_sync_roles_path do |f|
   = f.hidden_field :id, :value => @app.id
   = f.submit "Sync Roles", :confirm => 'This feature will update Roles only on the Application, User Roles will need to be updated manually.'
