--- a/app/views/my_account/_form.html.haml
+++ b/app/views/my_account/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @user, :url => {:action => (@user.new_record? ? :create : :update)} do |f|
+= form_for @user, :url => {:action => :update} do |f|
   = f.error_messages
   %p
     = f.label :first_name
@@ -25,4 +25,4 @@
     %br
     = f.password_field :password_confirmation
   %p
-    = f.submit (@user.new_record? ? "Sign up" : "Update")
+    = f.submit "Update"
