--- a/app/views/admin/users/_form.html.haml
+++ b/app/views/admin/users/_form.html.haml
@@ -25,4 +25,4 @@
     %br
     = f.password_field :password_confirmation
   %p
-    = f.submit (@user.new_record? ? "Sign up" : "Update")
+    = f.submit (@user.new_record? ? "Add User" : "Update")
