--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -6,7 +6,7 @@
   
 %table.users-list
   - @users.each_with_index do |user, index|
-    %tr{:class => "user_#{index + 1}"}
+    %tr{:class => "user_#{index + 1} user-item"}
       %td= "#{user.first_name}"
       %td= "#{user.last_name}"
       %td= "#{user.id}"
@@ -14,7 +14,13 @@
       %td
         = link_to user.email, edit_admin_user_path(:id => user.id)
       %td= user.roles
-      %td= user.status
+      %td
+        = form_for user, :url => admin_users_change_status_path, :html => {:id => "user_#{user.id}_status"}, :method => :post do |f|
+          = hidden_field_tag :user_id, user.id
+          = select :user, :status, ['Active','Inactive'], {:selected => user.status} , {:class => 'chzn-select', :id => "user_#{user.id}_status_select", :style => 'width:80px;', :onchange => "document.forms['user_#{user.id}_status'].submit()",}
+          %br
+          = f.submit 'Update Status', :class => 'status-button'
+      %td= link_to 'Delete', admin_user_path(:id => user.id), :method => :delete,:class => "delete_#{user.id}", :confirm => 'Are you sure?'
     %tr
       %td{:colspan => 7}
         %div.list_apps_main
