--- a/app/views/admin/users/_form.html.haml
+++ b/app/views/admin/users/_form.html.haml
@@ -11,7 +11,7 @@
   %p
     = f.label :department
     %br
-    = f.select :department, DEPARTMENTS, {:selected => @user.department, :include_blank => true}, {:class => 'chzn-select',:style => 'width:180px;'}
+    = f.select :department, DEPARTMENTS, {:selected => @user.department, :include_blank => true}, {:class => 'chzn-select',:style => 'width:180px;', :id => 'department'}
   %p
     = f.label :email, "Email Address"
     %br
