--- a/app/views/admin/users/_applications.html.haml
+++ b/app/views/admin/users/_applications.html.haml
@@ -1,42 +1,34 @@
-%div#applications
-  %h1= "Applications"
-  %div.list_active
-    %h2= "Active"
-    = form_for :clients, :url => admin_users_remove_apps_path, :method => :post do |f|
-      = hidden_field_tag :user_id, @user.id
-      %table{:style => 'width:100%'}
-        %tr
-          %td= "Application"
-          %td= "Roles"
-          %td= "Delete"
-          %td== &nbsp;
-        - @user.clients.sort_by(&:name).each do |client|
-          %tr{:class => "user-app-item"}
-            %td= "#{client.name}"
-            //%td= "#{client.access_rights.find_by_user_id(@user.id).roles}"
-            %td
-              = form_for :user, :url => admin_users_change_role_path, :remote => true, :html => {:name => "user_apps_#{client.id}"}, :method => :post do |f2|
-                = hidden_field_tag :user_id, @user.id
-                = hidden_field_tag :client_id, client.id
-                - if client.roles
-                  = f.select :roles, client.roles.split(',').collect {|p| [ p.humanize, p ] }, {:selected => client.access_rights.find_by_user_id(@user.id).roles, :include_blank => true}, {:onchange => "document.forms['user_apps_#{client.id}'].submit()", :class => 'chzn-select', :id => "user_apps_select_#{client.id}"}
-                  = f.submit 'Update Role', :class => 'update-role-button'
-            %td= link_to 'Delete', admin_users_remove_app_path(:id => client.id, :user_id => @user.id), :confirm => "Are you sure?"
-            %td= check_box_tag('client_ids[]', client.id, false, {:id => "client_"})
-        %tr
-          %td{:colspan => 2}
-          %td{:colspan => 2, :style => 'text-align:right'} 
-            - if @user.clients.count > 0
-              = f.submit 'Delete All', :confirm => "Are you sure?"
-            - else
-              = f.submit 'Delete All', :disabled => true
-  %div.list_all
-    %h2= "All"
-    = form_for :clients, :url => admin_users_add_apps_path, :method => :post do |f|
-      = f.hidden_field :user, :value => (@user.id)
-      = f.collection_select :id, @apps, :id, :name_with_id, {}, {:class => 'chzn-select', :multiple => true, :style => 'width:350px;'}
-      %br
-      - if @apps.count <= 0
-        = f.submit "Add Application(s)", :disabled => true
-      - else
-        = f.submit "Add Application(s)"
+%h1= "Applications"
+%div.list_active
+  %h2= "Active"
+  %table{:style => 'width:60%', :class => 'user-apps'}
+    %tr
+      %td= "Application"
+      %td= "Roles"
+      %td= "Delete"
+    - @user.clients.sort_by(&:name).each do |client|
+      %tr{:class => "user-app-item"}
+        %td= "#{client.name}"
+        //%td= "#{client.access_rights.find_by_user_id(@user.id).roles}"
+        %td
+          = form_for :user, :url => admin_users_change_role_path, :remote => true, :html => {:name => "user_apps_#{client.id}", :class => 'user_apps_roles_form'}, :method => :post do |f|
+            = hidden_field_tag :user_id, @user.id
+            = hidden_field_tag :client_id, client.id
+            - if client.roles
+              = f.select :roles, client.roles.split(',').collect {|p| [ p.humanize, p ] }, {:selected => client.access_rights.find_by_user_id(@user.id).roles, :include_blank => true}, {:class => 'chzn-select user_apps_roles_select', :id => "user_apps_select_#{client.id}"}
+              = f.submit 'Update Role', :class => 'update-role-button'
+        %td= link_to 'Delete', admin_users_remove_app_path(:id => client.id, :user_id => @user.id), :confirm => "Are you sure?", :class => 'delete_user_app', :remote => true
+    %tr
+      %td{:colspan => 2}
+      %td{:colspan => 2, :style => 'text-align:right'} 
+%div.list_all
+  %h2= "All"
+  = form_for :clients, :url => admin_users_add_apps_path, :method => :post, :remote => true, :html => {:class => 'add-apps-form', :name => 'add-apps-form'} do |f|
+    = f.hidden_field :user, :value => (@user.id)
+    = f.collection_select :id, @apps, :id, :name_with_id, {}, {:class => 'chzn-select', :multiple => true, :style => 'width:350px;'}
+    %br
+    - if @apps.count <= 0
+      = f.submit "Add Application(s)", :disabled => true
+    - else
+      = f.submit "Add Application(s)", :class => 'add-apps-button'
+  
